--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "mc_configure_fb_data.h": "c",
         "hardware_init.h": "c",
         "global_variable.h": "c",
-        "foc_drive.h": "c"
+        "foc_drive.h": "c",
+        "lks32mc07x_sys.h": "c"
     }
 }
