feat: 完成FOC硬件层配置与初步测试
1.ADC0、MCPWM0、HALL0中断测试
2.CMP、DAC过流配置
3.通用TIM0的1000HZ中断与任务调度器
4.PGA配置增益3.2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,13 @@
         "hardware_init.h": "c",
         "global_variable.h": "c",
         "foc_drive.h": "c",
-        "lks32mc07x_sys.h": "c"
+        "lks32mc07x_sys.h": "c",
+        "main.h": "c",
+        "lks32mc07x_dsp.h": "c",
+        "lks32mc07x_adc.h": "c",
+        "lks32mc07x_lib.h": "c",
+        "lks32mc07x_dac.h": "c",
+        "lks32mc07x_tmp.h": "c",
+        "task_scheduler.h": "c"
     }
 }
