--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,9 @@
         "lks32mc07x_lib.h": "c",
         "lks32mc07x_dac.h": "c",
         "lks32mc07x_tmp.h": "c",
-        "task_scheduler.h": "c"
+        "task_scheduler.h": "c",
+        "lks32mc07x_flash.h": "c",
+        "lks32mc07x_hall.h": "c",
+        "mc_hall.h": "c"
     }
 }
