--- a/electirc_vehicle/MDK-ARM/mc_07x.uvprojx
+++ b/electirc_vehicle/MDK-ARM/mc_07x.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define></Define>
               <Undefine></Undefine>
-              <IncludePath>..\Driver\Include;..\Core\inc;..\Hardware\inc;..\AppFunction\inc;..\FOC\inc;..\RTT</IncludePath>
+              <IncludePath>..\Driver\Include;..\Core\inc;..\Hardware\inc;..\AppFunction\inc;..\FOC\inc;..\RTT;..\Mathlib\inc</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -518,16 +518,6 @@
               <FileType>1</FileType>
               <FilePath>..\Hardware\src\hardware_init.c</FilePath>
             </File>
-            <File>
-              <FileName>mc_math.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Hardware\src\mc_math.c</FilePath>
-            </File>
-            <File>
-              <FileName>pid_regulators.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Hardware\src\pid_regulators.c</FilePath>
-            </File>
           </Files>
         </Group>
         <Group>
@@ -558,6 +548,16 @@
               <FileType>1</FileType>
               <FilePath>..\FOC\src\foc_drive.c</FilePath>
             </File>
+            <File>
+              <FileName>mc_hall.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\FOC\src\mc_hall.c</FilePath>
+            </File>
+            <File>
+              <FileName>mc_math.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\FOC\src\mc_math.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -572,6 +572,16 @@
               <FileName>SEGGER_RTT_printf.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\RTT\SEGGER_RTT_printf.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>MathLib</GroupName>
+          <Files>
+            <File>
+              <FileName>pid_regulators.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Mathlib\src\pid_regulators.c</FilePath>
             </File>
           </Files>
         </Group>
