--- a/electirc_vehicle/MDK-ARM/mc_07x.uvprojx
+++ b/electirc_vehicle/MDK-ARM/mc_07x.uvprojx
@@ -518,6 +518,11 @@
               <FileType>1</FileType>
               <FilePath>..\Hardware\src\hardware_init.c</FilePath>
             </File>
+            <File>
+              <FileName>system_init.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Hardware\src\system_init.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
