init: 软件结构重新整理
1.逻辑部分先删掉，优化软件结构，整体架构便于编码

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,14 @@
         "lks32mc07x_hall.h": "c",
         "mc_hall.h": "c",
         "segger_rtt.h": "c",
-        "system_init.h": "c"
+        "system_init.h": "c",
+        "lks32mc07x_gpio.h": "c",
+        "stdint.h": "c",
+        "cmath": "c",
+        "type_traits": "c",
+        "lks32mc07x_cmp.h": "c",
+        "lks32mc07x_uart.h": "c",
+        "lks32mc07x_tim.h": "c",
+        "lks32mc07x_nvr.h": "c"
     }
 }
